[metadata]
name = fugaku_node
author = Michael Sherman
author-email = shermanm@uchicago.edu
summary = IPA Hardware Managers: TACC Fugaku
license = Apache-2
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[files]
modules =
    fugaku_node

[entry_points]
ironic_python_agent.hardware_managers =
    fugaku_node = fugaku_node:FugakuNodeHardwareManager
